Fix on_field label for various fields
On_field label was not visible for certain fields because these fields
don't use regular html input elements but div elements (the SmartField
uses a div element in touch mode).

Fixed for MultilineSmartField, DropDownField, FileChooserField,
LabelField

230697

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/labelfield/LabelField.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/labelfield/LabelField.less
@@ -15,6 +15,14 @@
   #scout.user-select(text);
   #scout.overflow-ellipsis();
 
+  &[placeholder]:empty::before {
+    #scout.fake-placeholder();
+  }
+
+  &[placeholder].disabled:empty::before {
+    #scout.placeholder-disabled();
+  }
+
   &.has-inner-alignment {
 
     &.halign-left {
